[project]
name = "distlock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.68.1",
    "grpcio-tools>=1.68.1",
]

[dependency-groups]
dev = [
    "grpcio-testing>=1.68.1",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.3",
]

[tool.ruff]
force-exclude = true
exclude = ["distlock/stubs/*"]
