[project]
name = "distlock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.68.1",
    "grpcio-tools>=1.68.1",
    "pydantic>=2.10.4",
    "typer>=0.15.1",
]

[dependency-groups]
dev = [
    "grpcio-testing>=1.68.1",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest-asyncio>=0.25.2",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.3",
    "pytest-randomly>=3.16.0",
]

[project.scripts]
distlock = "distlock.__main__:app"

[tool.ruff]
force-exclude = true
exclude = ["distlock/stubs/*"]

[tool.setuptools]
packages = ["distlock", "distlock.stubs"]

[tool.setuptools.packages.find]
include = ["distlock"]
